# ihme-covid19

./: 2020_03_30.out  2020_03_31.out  ihme-covid19.cabal  shell.nix
src/: Main.hs
