Name:           ihme-covid19
Version:        0.1
License:        BSD3
Author:         David Fox
Category:       Unclassified
Synopsis:       Visualize IHME data sets
Description:    Visualize IHME data sets
Maintainer:     David Fox <dsf@seereason.com>
Homepage:       https://github.com/seereason/ihme-covid19
Build-Type:     Simple
Cabal-Version:  >= 1.4

Executable ihme-covid19
  Hs-Source-Dirs: src
  Main-Is: Main.hs
  Build-Depends: base, bytestring, cassava, containers, lens, vector


